@@ -1,13 +1,22 @@
+Fri Mar 23 12:46:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/Session_Container.cpp:
+        * ciao/StandardConfigurator_Impl.cpp:
+        * ciao/Swapping_Container.cpp:
+        * examples/Null_Component/Null_Component_exec.h:
+        * tools/Config_Handlers/ERE_Handler.h:
+          Layout changes
+
 Fri Mar 23 06:56:38 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp
-        
+
           Removed emulated exception macros.
 
 Fri Mar 23 06:45:51 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * DAnCE/RepositoryManager/ZIP_Wrapper.h
-        
+
           Addressed initialization warning.
 
 Fri Mar 23 03:13:40 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>
